<resources>
    <string name="app_name">ApexLegendsTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="search">Поиск игроков</string>
    <string name="listGamer">Сохраненные игроки</string>
    <string name="change">Сравнить статистику</string>


    <string name="enter_nickName">Никнейм игрока</string>
    <string name="find">Найти</string>
    <string name="save">Сохранить</string>

    <string name="minutes">мин.</string>
    <string name="hours">ч.</string>
    <string name="day">дн.</string>
    <string name="ago">назад</string>

    <string name="origin">Origin</string>
    <string name="playstation">Playstation</string>
    <string name="xbox">XBox</string>

    <string name="load_status">Загрузка...</string>
    <string name="load_error">Упс... Ошибка!</string>

    <string name="error_nickname">Такого игрока нет. Проверьте данные. </string>
    <string name="error_inet">Ошибка подключения к сети</string>

    <string name="level">ур.</string>
    <string name="kills">Убийств: </string>
    <string name="wins">Побед: </string>
    <string name="top3">Топ3: </string>


    <string name="setting">Настройки</string>
    <string name="lang">Язык</string>
    <string name="clear_bd">Очистить сохранения</string>
    <string name="new_Layout">Изменить стиль</string>
    <string name="interfaceSetting">Интерфейс</string>


    <string name="suuure">Вы точно уверены?</string>
    <string name="deleteAllGamers">Удалить все сохраненные статистики</string>
    <string name="deleteOneGamer">Удалить статистику </string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>


    <string name="now">Сейчас</string>
    <string name="noSave">Нет сохранения</string>
</resources>