<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/background"
    tools:context=".UI.ChangesFragment.ChangesFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/MAIN"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/HEADER_ChangeFrag"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/avatar_img_ChangeFrag"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="50dp"
                android:scaleType="fitCenter"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/gamerName_txt_ChangeFrag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:maxLines="1"
                android:shadowColor="@color/white"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="3"
                android:text="ttsdf"
                android:textSize="35sp"
                android:textStyle="bold"
                app:autoSizeTextType="uniform" />

            <Button
                android:id="@+id/saveGamer_btn_ChangeFrag"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/find_button_style"
                android:gravity="center"
                android:text="@string/save"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/oldRank_img_ChangeFrag"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    tools:srcCompat="@tools:sample/avatars" />

                <ImageView
                    android:id="@+id/newRank_img_ChangeFrag"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    tools:srcCompat="@tools:sample/avatars" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/date_txt_ChangeFrag"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="2ч назад" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/now" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/item_button_background"
                android:gravity="center"
                android:text="@string/kills"
                android:textAllCaps="true"
                android:textSize="30sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:id="@+id/linearLayou"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/old_kills_txt_ChangeFrag"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="старые" />

                    <TextView
                        android:id="@+id/new_kills_txt_ChangeFrag"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="новые" />
                </LinearLayout>

                <TextView
                    android:id="@+id/diff_kills_txt_ChangeFrag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="разница"
                    app:layout_constraintBottom_toBottomOf="@+id/linearLayou"
                    app:layout_constraintEnd_toEndOf="@+id/linearLayou"
                    app:layout_constraintStart_toStartOf="@+id/linearLayou"
                    app:layout_constraintTop_toTopOf="@+id/linearLayou" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/item_button_background"
                android:gravity="center"
                android:text="@string/wins"
                android:textAllCaps="true"
                android:textSize="30sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:id="@+id/linearLayoutttоооо"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/oldWins_txt_ChangeFrag"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="old" />

                    <TextView
                        android:id="@+id/newWins_txt_ChangeFrag"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="new" />
                </LinearLayout>

                <TextView
                    android:id="@+id/diffWins_txt_ChangeFrag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="diff"
                    app:layout_constraintBottom_toBottomOf="@+id/linearLayoutttоооо"
                    app:layout_constraintEnd_toEndOf="@+id/linearLayoutttоооо"
                    app:layout_constraintStart_toStartOf="@+id/linearLayoutttоооо"
                    app:layout_constraintTop_toTopOf="@+id/linearLayoutttоооо" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/item_button_background"
                android:gravity="center"
                android:text="@string/top3"
                android:textAllCaps="true"
                android:textSize="30sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:id="@+id/linearLayoutttxxxx"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/oldTop_txt_ChangeFrag"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="old" />

                    <TextView
                        android:id="@+id/newTop_txt_ChangeFrag"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="new" />
                </LinearLayout>

                <TextView
                    android:id="@+id/diffTop_txt_ChangeFrag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="diff"
                    app:layout_constraintBottom_toBottomOf="@+id/linearLayoutttxxxx"
                    app:layout_constraintEnd_toEndOf="@+id/linearLayoutttxxxx"
                    app:layout_constraintStart_toStartOf="@+id/linearLayoutttxxxx"
                    app:layout_constraintTop_toTopOf="@+id/linearLayoutttxxxx" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/FOOTER"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="100dp"
                android:gravity="center"
                android:orientation="vertical"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>